--- a/web_code/static/testing.css
+++ b/web_code/static/testing.css
@@ -1,2 +1,19 @@
 ul { list-style: none; }
 #recordingslist audio { display: block; margin-bottom: 10px; }
+
+body .recordings_container {
+    position: absolute;
+    /*left: 60%;*/
+    top: 70%;
+    /*width: 80%;*/
+    /*width: 170px;
+    height: 170px;
+    margin: -85px -85px;*/
+    /*margin: auto;*/
+    /*width: 50%;*/
+    /*border: 3px solid green;*/
+    /*padding: 10px;
+    text-align: center;*/
+    /*margin: auto;*/
+    width: 50%;
+}
