--- a/web_code/templates/index.html
+++ b/web_code/templates/index.html
@@ -1,7 +1,33 @@
-<!doctype html>
-<title>Hello from Flask</title>
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
-{% else %}
-  <h1>Hello, World!</h1>
-{% endif %}
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Match A Professor</title>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='index.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='button.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="{{ url_for('static', filename='Recorderjs/dist/recorder.js') }}"></script>
+</head>
+<body>
+    <div id='instructions'><h3>Click the button to start recording!</h3></div>
+    <div class="container" id="record_button">
+        <input type="checkbox" id="btn"/>
+        <label for="btn"></label>
+        <div class="time">
+            <div class="h_m"></div>
+            <div class="s_ms"></div>
+        </div>
+	</div>
+    <div id="recordings_container">
+        <p class='recordings_paragraph'>What a beautiful voice:</p>
+        <!--<h2>Recordings</h2>-->
+        <ul id="recordings_list"></ul>
+
+        <p class='recordings_paragraph'>And here's how you match up with professors!</p>
+    </div>
+
+	<!--<h2>Log</h2>-->
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
+<pre id="log"></pre>
+</body>
+</html>
