Continued stylizing of front page

--- a/web_code/templates/index.html
+++ b/web_code/templates/index.html
@@ -23,7 +23,7 @@
         <!--<h2>Recordings</h2>-->
         <ul id="recordings_list"></ul>
 
-        <p class='recordings_paragraph'>And here's how you match up with professors!</p>
+        <p class='recordings_paragraph'>Let's see how you match up with professors!</p>
     </div>
 
 	<!--<h2>Log</h2>-->
