--- a/web_code/templates/index.html
+++ b/web_code/templates/index.html
@@ -9,7 +9,9 @@
 	<script src="{{ url_for('static', filename='Recorderjs/dist/recorder.js') }}"></script>
 </head>
 <body>
-    <div id='instructions'><h3>Click the button to start recording!</h3></div>
+    <h2>Match a Prof</h2>
+    <h3>Record your voice to see which Northwestern CS professor you sound like!</h3>
+    <div id='instructions'><h3>Click the button to start recording</h3></div>
     <div class="container" id="record_button">
         <input type="checkbox" id="btn"/>
         <label for="btn"></label>
