Nice one! moved white noise generation into utilities, server now receives recordings from client, began creating streaming versions of classification functions

--- a/web_code/static/button.css
+++ b/web_code/static/button.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
+/*@import url(https://fonts.googleapis.com/css?family=Fjalla+One);*/
 @import url(button_animations.css);
 
 body {
