--- a/web_code/templates/index.html
+++ b/web_code/templates/index.html
@@ -6,7 +6,7 @@
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='index.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='button.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="{{ url_for('static', filename='Recorderjs/dist/recorder.js') }}"></script>
+	<script src="{{ url_for('static', filename='recorder.js') }}"></script>
 </head>
 <body>
     <h2>Match a Prof</h2>
