--- a/web_code/templates/index.html
+++ b/web_code/templates/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Match A Professor</title>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='index.css') }}">
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='button.css') }}">
+	<link rel=stylesheet type=text/css href="{{ static_url('index.css') }}">
+	<link rel=stylesheet type=text/css href="{{ static_url('button.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="{{ url_for('static', filename='recorder.js') }}"></script>
+	<script src="{{ static_url('recorder.js') }}"></script>
 </head>
 <body>
     <h2>Match a Prof</h2>
@@ -29,7 +29,7 @@
     </div>
 
 	<!--<h2>Log</h2>-->
-    <script src="{{ url_for('static', filename='index.js') }}"></script>
+    <script src="{{ static_url('index.js') }}"></script>
 <pre id="log"></pre>
 </body>
 </html>
