--- a/web_code/templates/index.html
+++ b/web_code/templates/index.html
@@ -27,6 +27,14 @@
 
         <p class='recordings_paragraph'>Let's see how you match up with professors!</p>
     </div>
+    <br>
+    <br>
+    <div>
+        <p>Built by Nathan Shelly and Sasha Weiss, for EECS 352 @Northwestern.</p>
+        <p><a href="https://docs.google.com/presentation/d/1xWapGB6mQnUaBJ-nfJyglCsV5nFxxiZ-G2ivald6820/edit?usp=sharing">About</a> | <a href="https://github.com/nathanshelly/professor_matching">Source</a>
+    </div>
+
+        
 
 	<!--<h2>Log</h2>-->
     <script src="{{ static_url('index.js') }}"></script>
